--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.usd filter=lfs diff=lfs merge=lfs -text
 *.hip filter=lfs diff=lfs merge=lfs -text
 *.rat filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
